git monday push and pull

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
      <!-- add expense items Modal --> 
-      <div class="modal fade" id="addExpenseItemModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+     <div class="modal fade" id="addExpenseItemModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
       <div class="modal-dialog">  
         <div class="modal-content">
           <div class="modal-header">
@@ -134,11 +134,12 @@
                   <div class="mb-3 col-6">
                     <label for="Expmonth" class="form-label"><b>Month<sup class="text-danger fs-5">*</sup></b></label>
                     <input type="month" class="form-control" id="Expmonth" required>
+                    <div id="errorExpMonth" class="text-danger"></div>
                   </div>
                   <div class="mb-3 col-6">
                     <label for="Expamount" class="form-label"><b>Amount<sup class="text-danger fs-5">*</sup></b></label>
                     <input type="number" class="form-control" id="Expamount" placeholder="Enter the amount" min="1" required>
-                    <div id="errortotalAmount" class="text-danger"></div>
+                    <div id="errorExpAmount" class="text-danger"></div>
                   </div>
                   <div class="modal-footer">
                     <button id="saveExpenseFormChanges" type="submit" class="btn btn-primary">Save changes</button>
