fix for unwanted event propagation

--- a/index.html
+++ b/index.html
@@ -224,11 +224,7 @@
                   <label for="Expmonth" class="form-label"
                     ><b>Month<sup class="text-danger fs-5">*</sup></b></label
                   >
-                  <input
-                    type="month"
-                    class="form-control"
-                    id="Expmonth"
-                  />
+                  <input type="month" class="form-control" id="Expmonth" />
                   <div id="errorExpMonth" class="text-danger"></div>
                 </div>
                 <div class="mb-3 col-6">
@@ -289,43 +285,6 @@
               Close
             </button>
             <button id="deletedata" type="button" class="btn btn-danger">
-              Delete
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- delete item Modal expense -->
-    <div
-      class="modal fade"
-      id="deleteModalExpense"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">
-              Delete Expense Data
-            </h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">Do you want delete this data ?</div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button id="deletedataExpense" type="button" class="btn btn-danger">
               Delete
             </button>
           </div>
