--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
       <div class="my-2 d-flex justify-content-between align-items-center">
         <p class="text-center mb-0">Budget</p>
         <i
+        id="budgetModal"
           class="bi bi-plus"
-          data-bs-toggle="modal"
-          data-bs-target="#addItemModal"
+         
+         
           style="font-size: 25px"
         ></i>
+        <!-- data-bs-toggle="modal" -->
+        <!-- data-bs-target="#addItemModal" -->
       </div>
 
       <!-- table -->
@@ -227,7 +230,7 @@
                   <div id="errorExpMonth" class="text-danger"></div>
                 </div>
                 <div class="mb-3 col-6">
-                  <label for="Expamount" class="form-label"
+                  <label for="expAmount" class="form-label"
                     ><b>Amount<sup class="text-danger fs-5">*</sup></b></label
                   >
                   <input
