tuesday first change

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         <!-- add item icon -->
         <i
           class="bi bi-plus"
-          data-bs-toggle="modal"
-          data-bs-target="#addExpenseItemModal"
+          id="expenseModal"
           style="font-size: 25px"
         ></i>
       </div>
